--- a/index.html
+++ b/index.html
@@ -4,16 +4,25 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-    <link href="/your-path-to-fontawesome/css/all.css" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="main.js">
-    <title>Hackathon In Coder Acdemy</title>
+    <title>Coder Academy - Hackathon</title>
 </head>
-<body>
+
+<body class="container">
+    <div class="typewriter text-center">
+        <h3>Want to learn more about space?</h3>
+    </div>
 
 
-    <button id="saturn_btn">Saturn</button>
+
+
+    <div>
+        <button id="saturn_btn btn btn-light">Saturn</button>
+    </div>
+    
     <script src="main.js"></script>
 
 </body>
+
 </html>
