styling main html

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <title>Coder Academy - Hackathon</title>
 </head>
 
-<body class="container">
+<body class="container d-flex flex-column justify-content-center">
     <div class="typewriter text-center">
         <h3>Want to learn more about space?</h3>
     </div>
@@ -17,8 +17,8 @@
 
 
 
-    <div>
-        <button id="saturn_btn btn btn-light">Saturn</button>
+    <div class="saturn-button">
+        <button id="saturn_btn" class="btn btn-dark">Saturn</button>
     </div>
     
     <script src="main.js"></script>
