--- a/index.html
+++ b/index.html
@@ -7,6 +7,13 @@
 </head>
 <body>
     <button id="saturn_btn">Saturn</button>
+    <button id="info_btn">Info</button>
+    <form id="query_form"> 
+        <input type="text" id="planet" name="planet">
+        <input type="submit">
+    </form>
+    <div id="planet_card"></div>
+
     <script src="main.js"></script>
 </body>
 </html>
