--- a/information.html
+++ b/information.html
@@ -10,6 +10,19 @@
     <title>Information/CA-Hackathon</title>
 </head>
 <body>
+    <div class="container">
+        <div class="row">
+            <div class="col-sm">
+                One of three columns
+            </div>
+            <div class="col-sm">
+                One of three columns
+            </div>
+            <div class="col-sm">
+                One of three columns
+            </div>
+        </div>
+    </div>
     
 </body>
 </html>
