--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
 
     <div class="saturn-button">
-        <button id="saturn_btn" class="btn btn-dark">Saturn</button>
+        <button id="saturn_btn" class="btn btn-dark text-center">Saturn</button>
     </div>
     
     <script src="main.js"></script>
