--- a/selection.html
+++ b/selection.html
@@ -7,7 +7,7 @@
     <link href="/your-path-to-fontawesome/css/all.css" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="main.js">
-    <title>selection/Hackathon In Coder Acdemy</title>
+    <title>selection/Hackathon Coder Acdemy</title>
 </head>
 <body>
     
