--- a/index.html
+++ b/index.html
@@ -13,14 +13,14 @@
         <h3>Want to learn more about space?</h3>
     </div>
 
-    <div class="saturn-button">
-        <button id="saturn_btn" class="btn btn-dark text-center">Saturn</button>
+    <div class="saturn-button d-flex justify-content-center">
+        <button id="saturn_btn" class="btn btn-dark">Saturn</button>
     </div>
 
-    <form id="query_form"> 
-        <input type="text" id="planet" name="planet">
-        <input type="submit">
-    </form>
+    <form id="query_form" class="d-flex justify-content-center"> 
+        <input type="text" id="planet" name="planet" class="mt-2">
+        <input type="submit" class="btn btn-outline-secondary ml-2">
+    </form> 
     
     <div id="planet_card"></div>
     
