saturn button commented out

--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
         <h3>Want to learn more about space?</h3>
     </div>
 
-    <div class="saturn-button d-flex justify-content-center">
+    <!-- <div class="saturn-button d-flex justify-content-center">
         <button id="saturn_btn" class="btn btn-dark">Saturn</button>
-    </div>
+    </div> -->
 
     <form id="query_form" class="d-flex justify-content-center"> 
         <input type="text" id="planet" name="planet" class="mt-2">
