--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     </form> 
     
     <div id="planet_card"></div>
-    
+    <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
     <script src="main.js"></script>
 
 </body>
