image of the day set as background picture

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css">
     <title>Coder Academy - Hackathon</title>
 </head>
-
+<section class="daily-image">
 <body class="container d-flex flex-column justify-content-center">
     <div class="typewriter text-center">
         <h3>Want to learn more about space?</h3>
@@ -27,5 +27,6 @@
     <script src="main.js"></script>
 
 </body>
+</section>
 
 </html>
