--- a/index.html
+++ b/index.html
@@ -7,8 +7,9 @@
     <link rel="stylesheet" href="style.css">
     <title>Coder Academy - Hackathon</title>
 </head>
-<section class="daily-image">
+
 <body class="container d-flex flex-column justify-content-center">
+    <div class="daily-image">
     <div class="typewriter text-center">
         <h3>Want to learn more about space?</h3>
     </div>
@@ -25,8 +26,7 @@
     <div id="planet_card"></div>
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
     <script src="main.js"></script>
-
+</div>
 </body>
-</section>
 
 </html>
