working on images

--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
             <div class="carousel-inner">
               <div class="carousel-item active">
                 <img src="..." class="d-block w-100" alt="...">
+                <!-- probably have 3-5 items per carousel item -->
               </div>
               <div class="carousel-item">
                 <img src="..." class="d-block w-100" alt="...">
