Co-authored-by: chris_white_12@hotmail.com <chris_white_12@hotmail.com>

--- a/index.html
+++ b/index.html
@@ -36,11 +36,15 @@
             </ol>
             <div class="carousel-inner">
               <div class="carousel-item active">
-                <img src="..." class="d-block w-100" alt="...">
+                <img id="cars_img_1" src="..." class="d-block w-100" alt="...">
+                <img id="cars_img_2" src="..." class="d-block w-100" alt="...">
+                <img id="cars_img_3" src="..." class="d-block w-100" alt="...">
                 <!-- probably have 3-5 items per carousel item -->
               </div>
               <div class="carousel-item">
-                <img src="..." class="d-block w-100" alt="...">
+                <img id="cars_img_4" src="..." class="d-block w-100" alt="...">
+                <img id="cars_img_5" src="..." class="d-block w-100" alt="...">
+                <img id="cars_img_6" src="..." class="d-block w-100" alt="...">
               </div>
               <div class="carousel-item">
                 <img src="..." class="d-block w-100" alt="...">
