--- a/index.html
+++ b/index.html
@@ -7,8 +7,7 @@
     <link rel="stylesheet" href="style.css">
     <title>Coder Academy - Hackathon</title>
 </head>
-
-<body class="container d-flex flex-column justify-content-center">
+<body>
     <div class="daily-image">
         <div class="typewriter text-center">
             <h3>Want to learn more about space?</h3>
@@ -17,42 +16,45 @@
         <form id="query_form" class="d-flex justify-content-center"> 
             <input type="text" id="planet" name="planet" class="mt-2">
             <input type="submit" class="btn btn-outline-secondary ml-2">
-        </form> 
-        
-        
+        </form>         
     </div>
     <div class="planet_section">
-        <div class="secton_info">
-            <div id="main_planet_img"></div>
+        <div class="secton_info d-flex justify-content-around">
+            <div>
+                <img id="main_planet_img" src="" alt="main planet photo">
+            </div>
             <div id="planet_card"></div>
         </div>
+    </div>
+    <div class="planet_links">
+        <p>Moons:</p>
     </div>
     <div class="photo_section">
         <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
             <ol class="carousel-indicators">
-              <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
-              <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
-              <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+            <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+            <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+            <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
             </ol>
             <div class="carousel-inner">
-              <div class="carousel-item active">
+            <div class="carousel-item active">
                 <img src="..." class="d-block w-100" alt="...">
                 <!-- probably have 3-5 items per carousel item -->
-              </div>
-              <div class="carousel-item">
+            </div>
+            <div class="carousel-item">
                 <img src="..." class="d-block w-100" alt="...">
-              </div>
-              <div class="carousel-item">
+            </div>
+            <div class="carousel-item">
                 <img src="..." class="d-block w-100" alt="...">
-              </div>
+            </div>
             </div>
             <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
-              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-              <span class="sr-only">Previous</span>
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="sr-only">Previous</span>
             </a>
             <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
-              <span class="carousel-control-next-icon" aria-hidden="true"></span>
-              <span class="sr-only">Next</span>
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="sr-only">Next</span>
             </a>
         </div>
     </div>
