--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     <title>Coder Academy - Hackathon</title>
 </head>
 
-<body class="container d-flex flex-column justify-content-center">
-    <div class="daily-image">
+<body class="container d-flex flex-column justify-content-center m-0 p-0">
+    <div class="daily-image m-0">
         <div class="typewriter text-center">
             <h3>Want to learn more about space?</h3>
         </div>
