change info section to display only when searched

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <div class="daily-image">
         <div class="typewriter text-center">
-            <h3>Want to learn more about space?</h3>
+            <h3>Search for a planet...</h3>
         </div>
 
         <form id="query_form" class="d-flex justify-content-center"> 
@@ -18,15 +18,15 @@
             <input type="submit" class="btn btn-outline-secondary ml-2">
         </form>         
     </div>
-    <div class="planet_section">
-        <div class="secton_info d-flex justify-content-around">
+    <div id="planet_section">
+        <!-- <div class="secton_info d-flex justify-content-around">
             <div>
                 <img id="main_planet_img" src="" alt="main planet photo">
             </div>
             <div id="planet_card"></div>
-        </div>
+        </div> -->
     </div>
-    <div class="photo_section">
+    <!-- <div id="photo_section">
         <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
             <ol class="carousel-indicators">
             <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
@@ -34,15 +34,20 @@
             <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
             </ol>
             <div class="carousel-inner">
-            <div class="carousel-item active">
-                <img src="..." class="d-block w-100" alt="...">
-                <!-- probably have 3-5 items per carousel item -->
+            <div class="carousel-item active d-flex justify-content-around">
+                <img id="caro_img1" src="" class="w-30" alt="...">
+                <img id="caro_img2" src="" class="w-30" alt="...">
+                <img id="caro_img3" src="" class="w-30" alt="...">
             </div>
-            <div class="carousel-item">
-                <img src="..." class="d-block w-100" alt="...">
+            <div class="carousel-item d-flex justify-content-around">
+                <img id="caro_img4" src="" class="w-30" alt="...">
+                <img id="caro_img5" src="" class="w-30" alt="...">
+                <img id="caro_img6" src="" class="w-30" alt="...">
             </div>
-            <div class="carousel-item">
-                <img src="..." class="d-block w-100" alt="...">
+            <div class="carousel-item d-flex justify-content-around">
+                <img id="caro_img7" src="" class="w-30" alt="...">
+                <img id="caro_img8" src="" class="w-30" alt="...">
+                <img id="caro_img9" src="" class="w-30" alt="...">
             </div>
             </div>
             <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
@@ -54,7 +59,7 @@
             <span class="sr-only">Next</span>
             </a>
         </div>
-    </div>
+    </div> -->
     
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
     <script src="main.js"></script>
