--- a/index.html
+++ b/index.html
@@ -5,10 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <link rel="stylesheet" href="style.css">
-    <title>Coder Academy - Hackathon</title>
+    <title>Space Data</title>
 </head>
 <body>
     <div class="daily-image">
+        <div id="today"></div>
+        
         <div class="typewriter text-center">
             <h3>Search for a planet...</h3>
         </div>
@@ -19,48 +21,9 @@
         </form>         
     </div>
     <div id="planet_section">
-        <!-- <div class="secton_info d-flex justify-content-around">
-            <div>
-                <img id="main_planet_img" src="" alt="main planet photo">
-            </div>
-            <div id="planet_card"></div>
-        </div> -->
+
     </div>
-    <!-- <div id="photo_section">
-        <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
-            <ol class="carousel-indicators">
-            <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
-            <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
-            <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
-            </ol>
-            <div class="carousel-inner">
-            <div class="carousel-item active d-flex justify-content-around">
-                <img id="caro_img1" src="" class="w-30" alt="...">
-                <img id="caro_img2" src="" class="w-30" alt="...">
-                <img id="caro_img3" src="" class="w-30" alt="...">
-            </div>
-            <div class="carousel-item d-flex justify-content-around">
-                <img id="caro_img4" src="" class="w-30" alt="...">
-                <img id="caro_img5" src="" class="w-30" alt="...">
-                <img id="caro_img6" src="" class="w-30" alt="...">
-            </div>
-            <div class="carousel-item d-flex justify-content-around">
-                <img id="caro_img7" src="" class="w-30" alt="...">
-                <img id="caro_img8" src="" class="w-30" alt="...">
-                <img id="caro_img9" src="" class="w-30" alt="...">
-            </div>
-            </div>
-            <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
-            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-            <span class="sr-only">Previous</span>
-            </a>
-            <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
-            <span class="carousel-control-next-icon" aria-hidden="true"></span>
-            <span class="sr-only">Next</span>
-            </a>
-        </div>
-    </div> -->
-    
+
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
     <script src="main.js"></script>
 </body>
