changed button style

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
         <form id="query_form" class="d-flex justify-content-center"> 
             <input type="text" id="planet" name="planet" class="mt-2">
-            <input type="submit" class="btn btn-outline-secondary ml-2">
+            <input type="submit" class="btn btn-secondary ml-2">
         </form>         
     </div>
     <div id="planet_section">
